<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:maxWidth="600dp"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context=".TranslatorActivity"
    android:background="#0E0F04"
    >

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kogame_translate_inapp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/feedback_button"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/chip_selector"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/input_panel"
        app:layout_constraintEnd_toStartOf="@+id/settings_button"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:importantForAccessibility="no"
            android:src="@drawable/write_review"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/ibm_plex_sans_medium"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:text="@string/feedback"
            android:textColor="#F9FFD6"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/chip_selector"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/input_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:importantForAccessibility="no"
            android:src="@drawable/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input_panel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/input_panel"
        app:layout_constraintBottom_toTopOf="@+id/output_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_button">

        <EditText
            android:id="@+id/input_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/ibm_plex_sans"
            android:gravity="start|top"
            android:hint="@string/enter_text_here"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLength="150000"
            android:padding="16dp"
            android:scrollHorizontally="false"
            android:textColor="#F9FFD6"
            android:textColorHint="#88F9FFD6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/output_panel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/output_panel"
        app:layout_constraintBottom_toTopOf="@+id/translate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_panel">

        <TextView
            android:id="@+id/output_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            android:ems="10"
            android:textSize="18sp"
            android:focusable="false"
            android:fontFamily="@font/ibm_plex_sans"
            android:gravity="start|top"
            android:hint="@string/translation_will_appear_here"
            android:inputType="none"
            android:overScrollMode="always"
            android:padding="16dp"
            android:scrollbars="vertical"
            android:textColor="#F9FFD6"
            android:textColorHint="#88F9FFD6"
            app:layout_constraintBottom_toTopOf="@+id/copy_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/copy_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/copy_translation_text"
            android:src="@drawable/copy_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/statusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="#9db032"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/target_language_picker"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/chip_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/translate_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output_panel">

        <TextView
            android:id="@+id/targetFlag"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/no_flag"
            android:textAlignment="center"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/targetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/ibm_plex_sans_medium"
            android:includeFontPadding="false"
            android:textColor="#F9FFD6"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/targetFlag"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/translate_button"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/translate_button_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/target_language_picker"
        app:layout_constraintTop_toBottomOf="@+id/output_panel">

        <ImageView
            android:id="@+id/translate_button_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/translate"
            android:src="@drawable/arrow_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <Button-->
<!--        android:id="@+id/translate_button"-->
<!--        android:layout_width="62dp"-->
<!--        android:layout_height="62dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        android:background="@drawable/translate_button_selector"-->
<!--        android:contentDescription="@string/translate"-->
<!--        android:drawableStart="@drawable/arrow_forward"-->
<!--        android:enabled="false"-->
<!--        android:padding="10dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/feedback_button"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/target_language_picker"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/output_panel" />-->

</androidx.constraintlayout.widget.ConstraintLayout>